--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -6,7 +6,7 @@ spring:
     name: bootcoin-service
 
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: host.docker.internal:9092
     producer:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
@@ -14,20 +14,19 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb://localhost:27017/bootcoin-database
+      uri: mongodb://host.docker.internal:27017/bootcoin-database
 
   config:
-    import: optional:configserver:http://localhost:8888
+    import: optional:configserver:http://config-server:8888
 
 logging:
   level:
     root: INFO
     org.springframework.kafka: DEBUG
 
-
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
     register-with-eureka: true
     fetch-registry: true
